# legal-contract-review-ai

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.hosted  pyproject.toml  requirements.lock.txt
backend/app/: __init__.py  main.py
backend/app/api/: errors.py  routes_config.py  routes_health.py  routes_playbooks.py  routes_reviews.py
backend/app/core/: config.py  job_runner.py  middleware.py
backend/app/db/: models.py  repository.py  session.py
backend/app/model_adapter/: base.py  errors.py  ollama_adapter.py
backend/app/playbook/: guidance_loader.py  loader.py
backend/app/schemas/: clause_attributes.py  model_io.py  review.py
backend/app/services/: applicability.py  attribute_extraction.py  block_splitter.py  clause_intelligence.py  drafting.py  embedding_client.py  guidance_retrieval.py  haystack_pipeline.py  parsing.py  retention.py  rule_engine.py  segmentation.py  ssrf_guard.py  upload.py
backend/scripts/: index_guidance.py
backend/tests/: conftest.py  test_attribute_extraction.py  test_clause_intelligence.py  test_cors.py  test_demo_access.py  test_guidance_attachment.py  test_guidance_loader.py  test_guidance_retrieval.py  test_haystack_pipeline.py  test_health.py  test_log_redaction.py  test_middleware.py  test_ollama_adapter.py  test_parsing.py  test_playbook_loader.py  test_playbooks_api.py  test_qdrant_auth.py  test_retention.py  test_reviews_golden_path.py  test_reviews_list.py  test_rule_engine.py  test_segmentation.py  test_ssrf_guard.py
(+76 files in other folders)
