[project]
name = "part2-backend"
version = "0.1.0"
description = "Part 2 Legal Contract Risk Review backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.112",
  "uvicorn[standard]>=0.30,<0.31",
  "sqlalchemy>=2.0,<2.1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "python-multipart>=0.0.9,<0.1",
  "aiosqlite>=0.20,<0.21",
  "greenlet>=3.0",
  "pypdf>=6.0,<7",
  "python-docx>=1.1,<2",
  "httpx>=0.27,<0.28",
  "haystack-ai>=2.31,<2.32",
  "qdrant-client>=1.12,<1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<0.24",
]
fixtures = [
  "reportlab>=4.0,<5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
